[tool.poetry]
name = "grand-cypher-io"
version = "0.1.0"
description = "File IO routines for reading and writing OpenCypher files"
authors = ["Jordan Matelsky <opensource@matelsky.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "grand_cypher_io" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
networkx = "^3.1"
dask = "^2023.9.3"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
